Increased test coverage